[gd_scene load_steps=5 format=3 uid="uid://dfrt33c1gjcjo"]

[ext_resource type="Script" path="res://inventory/buildMenu/buildMenu.gd" id="1_ikopu"]
[ext_resource type="Texture2D" uid="uid://d20g35wds82cd" path="res://Enemy/download.jpg" id="1_inlpd"]
[ext_resource type="Texture2D" uid="uid://dhai2ggw8om10" path="res://inventory/buildMenu/TowerPlacementAssets/TowerPlacementBG.png" id="2_68yc5"]
[ext_resource type="FontFile" uid="uid://c32arsggg4kna" path="res://startscreen/Nihonium113.ttf" id="4_rajbg"]

[node name="CraftingMenu" type="Control"]
visible = false
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 10
script = ExtResource("1_ikopu")

[node name="MenuContainer" type="Control" parent="."]
layout_mode = 1
anchor_left = 0.64
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = 15.0
offset_bottom = -25.0
grow_horizontal = 0
grow_vertical = 2

[node name="TextureRect" type="TextureRect" parent="MenuContainer"]
texture_filter = 1
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_68yc5")
expand_mode = 3
stretch_mode = 4

[node name="Control" type="Control" parent="MenuContainer"]
layout_mode = 1
anchor_left = 0.115
anchor_top = 0.07
anchor_right = 0.835
anchor_bottom = 0.425
grow_horizontal = 2

[node name="towerImage" type="TextureRect" parent="MenuContainer/Control"]
layout_mode = 1
anchors_preset = -1
anchor_right = 1.0
anchor_bottom = 0.7
offset_left = 10.0
offset_top = 10.0
offset_right = -10.0
offset_bottom = -10.0
texture = ExtResource("1_inlpd")
expand_mode = 1
stretch_mode = 5

[node name="towerTitle" type="Label" parent="MenuContainer/Control"]
layout_mode = 1
anchors_preset = -1
anchor_top = 0.7
anchor_right = 1.0
anchor_bottom = 0.7
offset_left = 10.0
offset_top = -8.0
offset_right = -10.0
offset_bottom = 15.0
theme_override_fonts/font = ExtResource("4_rajbg")
theme_override_font_sizes/font_size = 30
text = "Example Title"
horizontal_alignment = 1
vertical_alignment = 1

[node name="resourceDisplay" type="HBoxContainer" parent="MenuContainer/Control"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.5
anchor_top = 0.82
anchor_right = 0.5
anchor_bottom = 0.985
offset_right = 0.401581
offset_bottom = 0.397598
grow_horizontal = 2
grow_vertical = 0

[node name="scrollContainer" type="ScrollContainer" parent="MenuContainer"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.113
anchor_top = 0.465
anchor_right = 0.836
anchor_bottom = 0.94
grow_horizontal = 2
grow_vertical = 2
follow_focus = true
vertical_scroll_mode = 3

[node name="towerDisplayList" type="VBoxContainer" parent="MenuContainer/scrollContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_constants/separation = 0

[node name="MouseSensor" type="Control" parent="MenuContainer"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[connection signal="selectedTowerChanged" from="." to="." method="_on_selected_tower_changed"]
[connection signal="mouse_entered" from="MenuContainer/MouseSensor" to="." method="_onMouseEnter"]
[connection signal="mouse_exited" from="MenuContainer/MouseSensor" to="." method="_onMouseExit"]
